--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
             <input type="file" id="file-input" accept="image/*" capture="environment" style="display: none;">
-            <button id="capture-btn">Shot The Breakdown</button>
+            <button id="capture-btn" type='buttom'>Shot The Breakdown</button>
             <label for="details">Describe The Breakdown:</label>
             <textarea id="details" name="details" class='input-box full-width' placeholder="Describe The Breakdown"></textarea>
 
