--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <label for="details">Describe The Breakdown:</label>
             <textarea id="details" name="details" class='input-box full-width' placeholder="Describe The Breakdown"></textarea>
 
-            <a href="" id="skip">Skip</a>
+            <a href="https://ahmed-hossaam.github.io/Review-/" id="skip">Skip</a>
             <input type="submit" value="Submit Request" id="submit-btn">
         </form>
     </div>
